// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input allowClear should change type when click 1`] = `
<span
  class="ant-input-affix-wrapper"
>
  <input
    class="ant-input"
    type="text"
    value="111"
  />
  <span
    class="ant-input-suffix"
  >
    <span
      class="ant-input-clear-icon"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should change type when click 2`] = `
<span
  class="ant-input-affix-wrapper ant-input-affix-wrapper-focused"
>
  <input
    class="ant-input"
    type="text"
    value=""
  />
  <span
    class="ant-input-suffix"
  >
    <span
      class="ant-input-clear-icon ant-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if defaultValue is undefined, null or empty string 1`] = `
<span
  class="ant-input-affix-wrapper"
>
  <input
    class="ant-input"
    type="text"
    value=""
  />
  <span
    class="ant-input-suffix"
  >
    <span
      class="ant-input-clear-icon ant-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if defaultValue is undefined, null or empty string 2`] = `
<span
  class="ant-input-affix-wrapper"
>
  <input
    class="ant-input"
    type="text"
    value=""
  />
  <span
    class="ant-input-suffix"
  >
    <span
      class="ant-input-clear-icon ant-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if defaultValue is undefined, null or empty string 3`] = `
<span
  class="ant-input-affix-wrapper"
>
  <input
    class="ant-input"
    type="text"
    value=""
  />
  <span
    class="ant-input-suffix"
  >
    <span
      class="ant-input-clear-icon ant-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if value is undefined, null or empty string 1`] = `
<span
  class="ant-input-affix-wrapper"
>
  <input
    class="ant-input"
    type="text"
    value=""
  />
  <span
    class="ant-input-suffix"
  >
    <span
      class="ant-input-clear-icon ant-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if value is undefined, null or empty string 2`] = `
<span
  class="ant-input-affix-wrapper"
>
  <input
    class="ant-input"
    type="text"
    value=""
  />
  <span
    class="ant-input-suffix"
  >
    <span
      class="ant-input-clear-icon ant-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should not show icon if value is undefined, null or empty string 3`] = `
<span
  class="ant-input-affix-wrapper"
>
  <input
    class="ant-input"
    type="text"
    value=""
  />
  <span
    class="ant-input-suffix"
  >
    <span
      class="ant-input-clear-icon ant-input-clear-icon-hidden"
      role="button"
      tabindex="-1"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Input allowClear should support classNames and styles 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper custom-class"
    style="background-color: red;"
  >
    <span
      class="rc-input-prefix custom-prefix"
      style="color: blue;"
    >
      prefix
    </span>
    <input
      class="rc-input custom-input"
      style="color: red;"
      type="text"
      value="123"
    />
    <span
      class="rc-input-suffix custom-suffix"
      style="color: yellow;"
    >
      <span
        class="rc-input-show-count-suffix rc-input-show-count-has-suffix custom-count"
        style="color: green;"
      >
        3
      </span>
      suffix
    </span>
  </span>
  <span
    class="rc-input-group-wrapper custom-class"
    style="background-color: red;"
  >
    <span
      class="rc-input-wrapper rc-input-group"
    >
      <span
        class="rc-input-affix-wrapper"
      >
        <span
          class="rc-input-prefix custom-prefix"
          style="color: blue;"
        >
          prefix
        </span>
        <input
          class="rc-input custom-input"
          style="color: red;"
          type="text"
          value="123"
        />
        <span
          class="rc-input-suffix custom-suffix"
          style="color: yellow;"
        >
          <span
            class="rc-input-show-count-suffix rc-input-show-count-has-suffix custom-count"
            style="color: green;"
          >
            3
          </span>
          suffix
        </span>
      </span>
      <span
        class="rc-input-group-addon"
      >
        addon
      </span>
    </span>
  </span>
  <input
    class="rc-input custom-input custom-class"
    style="color: red; background-color: red;"
    type="text"
    value="123"
  />
  <span
    class="rc-input-group-wrapper custom-class"
    style="background-color: red;"
  >
    <span
      class="rc-input-wrapper rc-input-group"
    >
      <input
        class="rc-input custom-input"
        style="color: red;"
        type="text"
        value="123"
      />
      <span
        class="rc-input-group-addon"
      >
        addon
      </span>
    </span>
  </span>
</div>
`;

exports[`Input rtl render component should be rendered correctly in RTL direction 1`] = `
<input
  class="ant-input ant-input-rtl"
  type="text"
  value=""
/>
`;

exports[`Input rtl render component should be rendered correctly in RTL direction 2`] = `
<span
  class="ant-input-group ant-input-group-rtl"
/>
`;

exports[`Input should support maxLength 1`] = `
<input
  class="ant-input"
  maxlength="3"
  type="text"
  value=""
/>
`;

exports[`Input should support size 1`] = `
<input
  class="ant-input ant-input-lg"
  type="text"
  value=""
/>
`;

exports[`Input should support size in form 1`] = `
<form
  class="ant-form ant-form-horizontal ant-form-large"
>
  <div
    class="ant-form-item"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-lg"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
